# bat_in_rust

./: Cargo.toml  README.md
.github/workflows/: release.yaml
github/workflows/: release.yaml
src/: main.rs  update.rs
