[package]
name = "show"
version = "0.1.3"
edition = "2021"
description = "A bat-like syntax highlighter"
license = "MIT"
repository = "https://github.com/Behruz-s-organization/bat_in_rust"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
owo-colors = "4.3.0"
syntect = "5.3.0"
two-face = "0.5.1"
